hack/invalid-examples/standard/httproute/duplicate-header-match.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duplicate-header-match
spec:
  rules:
  - matches:
    - headers:
      - name: foo
        value: bar
      - name: foo
        value: bar
