hack/invalid-examples/standard/httproute/invalid-backend-group.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-backend-group
spec:
  rules:
  - backendRefs:
    - group: "*"
      name: foo
      port: 80
