hack/invalid-examples/standard/httproute/invalid-backend-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-backend-kind
spec:
  rules:
  - backendRefs:
    - kind: "*"
      name: foo
      port: 80
