hack/invalid-examples/standard/httproute/invalid-filter-duplicate-header.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-filter-duplicate-header
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        remove:
        - foo
        - foo
