hack/invalid-examples/standard/httproute/invalid-filter-wrong-field.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-filter-wrong-field
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestRedirect:
        port: 443
