hack/invalid-examples/standard/httproute/invalid-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-hostname
spec:
  hostnames:
  - http://a<
  rules:
  - backendRefs:
    - name: foo
