hack/invalid-examples/standard/httproute/invalid-method.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-method
spec:
  rules:
  - matches:
    - method: NOTREAL
