hack/invalid-examples/standard/httproute/invalid-path-specialchars.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-path-specialchars
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /[]
